# haskellBook

./: README.md  ch11.lhs  ch12.lhs  ch15.lhs
ch09/: Cipher.hs  PoemLines.hs  exercises.hs
ch10/: database.hs  exercises.hs
ch15/: experiments.hs  madLibs.hs
ch15/exercises/: exercises.cabal  package.yaml  stack.yaml
ch15/exercises/.stack-work/: stack.sqlite3
ch15/exercises/.stack-work/install/x86_64-openbsd/2dafbcb726fc9a870946a82e2ffef7212084c7594ff72cf61b519146769a1d0a/9.2.4/pkgdb/: exercises-0.1.0.0-BECH8ZGs5dbEoY54xZk6DA.conf  package.cache
ch15/exercises/.stack-work/install/x86_64-openbsd/33a1ddc683e2c8499c312c6474e872fe984a74bd16835f787c03554d332cb7b1/9.2.4/pkgdb/: exercises-0.1.0.0-BECH8ZGs5dbEoY54xZk6DA.conf  package.cache
ch15/exercises/src/: Exercises.hs
ch15/exercises/test/: Spec.hs
ch15/exercises/tests/: tests.hs
ch15/orphan-instance/: Listy.hs  ListyInstances.hs
ch16/: ch16ex.hs  examples.hs
ch16/exercises/: exercises.cabal
ch16/exercises/src/: Exercises.hs
ch16/exercises/tests/: .test.hs.swp  tests.hs
ch17/: ch17ex.hs  examples.hs  exercises.hs
ch17/exercises/: :  exercises.cabal  stack.yaml
ch17/exercises/src/: Exercises.hs
ch17/exercises/tests/: tests.hs
ch18/: examples.hs  exercises.hs
ch18/exercises/src/: .Exercises.hs.swp  Exercises.hs
ch18/exercises/tests/: tests.hs
ch20/: examples.hs  exercises.hs
ch22/: .experiments.hs.swp  Examples.hs  exercises.hs  experiments.hs
(+9 files in other folders)
