name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Rokas Gegevičius
maintainer:          rg@rgl.lt
copyright:           2023 Rokas Gegevičius
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Exercises
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base 
                     , QuickCheck

test-suite tests
  hs-source-dirs:       tests
  main-is:              tests.hs
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , exercises
                      , hspec
                      , QuickCheck
